tests/od2trips/errors/format/vm/vm_column_missing/errors.od2trips
Error: Missing line with 8 district names.
Quitting (on error).
